--- a/tooling/pyproject.toml
+++ b/tooling/pyproject.toml
@@ -9,7 +9,9 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "fastapi-code-generator (>=0.5.2,<0.6.0)"
+    "fastapi-code-generator (>=0.5.2,<0.6.0)",
+    "autoflake (>=2.3.1,<3.0.0)",
+    "ruff (>=0.9.4,<0.10.0)"
 ]
 
 
