Re-apply some pyproject changes

--- a/tooling/pyproject.toml
+++ b/tooling/pyproject.toml
@@ -6,13 +6,17 @@ authors = [
     {name = "Nuno Campos",email = "nuno@langchain.dev"}
 ]
 license = {text = "MIT"}
-readme = "README.md"
+readme = "../README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "fastapi-code-generator (>=0.5.2,<0.6.0)",
     "autoflake (>=2.3.1,<3.0.0)",
     "ruff (>=0.9.4,<0.10.0)"
 ]
+
+
+[tool.poetry]
+package-mode = false
 
 
 [build-system]
